--- a/aula10/package.json
+++ b/aula10/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "moment": "^2.28.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
